                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 20-09-2004 fixed: button states in Video OSD eg. forwarding and rewinding inside and outside the osd [sf bug #997386]
  - 20-09-2004 fixed: output to all speakers with ac3 2.0, (needs new mplayer.dll)
  - 20-09-2004 fixed: [ 1026292 ] tags with blank album name would cause the display of wrong thumbnails
  - 19-09-2004 fixed: Artists/Genres with ' in their name were replaced with '' in the database views.
  - 19-09-2004 fixed: Loadfont crash when font did not exist.
  - 19-09-2004 fixed: SF bug 1030531: Crash when skin change after python is used.
  - 19-09-2004 fixed: thumb aspectratio in musicinfo screen 
  - 19-09-2004 fixed: previously set password was lost after enabling the webserver
  - 19-09-2004 fixed: webserver could only be enabled if you set the password
  - 19-09-2004 fixed: [ 1006147 ] music playback: SELECT, PAUSE & SELECT -> XBMC crashes
  - 19-09-2004 fixed: [ 1011939 ] OSD Focus Bug
  - 18-09-2004 changed: Support for TTF subtitles for MKV and OGM files in mplayer.dll
  - 16-09-2004 changed: add thin outline to TTF subtitles
  - 16-09-2004 changed: Start services (ftp/web etc.) before loading the skin on startup
  - 16-09-2004 added: Make Music Info stay onscreen in vis by hitting INFO again. (sf patch #1028895 by kraqh3d)
  - 16-09-2004 fixed: HTTP Proxy use in Weather screens (sf patch #1028936 by kusskowe)
  - 16-09-2004 added: Auto update after 2 seconds when you select a new location in the weather screen. (sf patch #1028936 by kusskowe)
  - 16-09-2004 fixed: ripping audio cd's to hd doesn't work anymore
  - 16-09-2004 added: support for TTF subtitles