@@ -2011,6 +2011,18 @@
 	<string>
 		<id>743</id>
 		<value>Yellow</value>
+	</string>
+	<string>
+		<id>744</id>
+		<value>Files</value>
+	</string>		
+	<string>
+		<id>745</id>
+		<value>No scanned information for this view</value>
+	</string>		
+	<string>
+		<id>746</id>
+		<value>Switch to the Files view</value>
 	</string>		
 	<string>
 		<id>998</id>
