@@ -18,7 +18,6 @@ public:
 	virtual ~CGUIWindowVideoGenre(void);
   virtual bool    OnMessage(CGUIMessage& message);
   virtual void    OnAction(const CAction &action);
-  virtual void    Render();
 
 private:
   void              SetIMDBThumbs(VECFILEITEMS& items);
