@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 20-09-2004 changed: Database views now show a message if the database is empty.
+  - 20-09-2004 changed: Songs and Movies view renamed to Files view as it's more consistent.
   - 20-09-2004 fixed: button states in Video OSD eg. forwarding and rewinding inside and outside the osd [sf bug #997386]
   - 20-09-2004 fixed: output to all speakers with ac3 2.0, (needs new mplayer.dll)
   - 20-09-2004 fixed: [ 1026292 ] tags with blank album name would cause the display of wrong thumbnails
